# MathLib

./: AdvancedMath.h  BasicMath.h  CMakeLists.txt  MyMathLib.h  main.cpp  sonar-project.properties  test.cpp
.github/workflows/: build.yml  c-cpp.yml
